--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# Created by https://www.toptal.com/developers/gitignore/api/node,dotenv
+# Edit at https://www.toptal.com/developers/gitignore?templates=node,dotenv
 
 ### dotenv ###
 .env
@@ -141,3 +143,4 @@ dist
 # SvelteKit build / generate output
 .svelte-kit
 
+# End of https://www.toptal.com/developers/gitignore/api/node,dotenv
